--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MentalkApp"
         tools:targetApi="31">
         <activity
+            android:name=".view.result.ResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.overview.OverviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.splash.SplashActivity"
             android:exported="true" />
 
