--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:theme="@style/Theme.MentalkApp"
         tools:targetApi="31">
         <activity
-            android:name=".view.detail.NewsDetailActivity"
+            android:name=".view.news.NewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.news.NewsDetailActivity"
             android:exported="false" />
         <activity
             android:name=".view.splash.SplashActivity"
