--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MentalkApp"
         tools:targetApi="31">
+
+        <activity
+            android:name=".view.overview.OverviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.latihan.Latihan4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.latihan.Latihan3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.latihan.Latihan2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.latihan.Latihan1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".view.option.OptionActivity"
+            android:exported="false" />
         <activity
             android:name=".view.news.NewsActivity"
             android:exported="false" />
